# CMUD

./: .gitmodules
YoloNerf/: .gitignore  CMakeLists.txt
YoloNerf/notebooks/: PythonClient.ipynb  Untitled.ipynb  YoloYoutube.py
YoloNerf/notebooks/.ipynb_checkpoints/: PythonClient-checkpoint.ipynb  Untitled-checkpoint.ipynb
YoloNerf/output/: framedump.txt
YoloNerf/src/: globals.h  main.cpp  networking.cpp  networking.h
